<resources>
  <string name="app_name">MVP and testing</string>
  <string name="add_note">New Note</string>
  <string name="navigation_view_header_title">Notes</string>
  <string name="title_hint">Title</string>
  <string name="description_hint">Enter your note here.</string>
  <string name="empty_note_message">Notes cannot be empty</string>
  <string name="successfully_saved_note_message">Note saved</string>
  <string name="cannot_connect_to_camera_message">Cannot connect to camera</string>
  <string name="take_picture">Add picture</string>
  <string name="take_picture_error">Could not take picture</string>
  <string name="statistics_title">Statistics</string>
  <string name="no_statistics_available">No statistics</string>
  <string name="no_data">No data</string>
  <string name="loading">LOADING</string>
  <string name="note_detail">Note detail</string>
</resources>
