...
      <FrameLayout
          android:id="@+id/contentFrame"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>

      <android.support.design.widget.FloatingActionButton
          android:id="@+id/fab_add_notes"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/fab_margin"
          android:src="@drawable/ic_add"
          app:fabSize="normal"
          app:layout_anchor="@id/contentFrame"
...
